# AutoMoDe-private

./: .gitignore  CMakeLists.txt  README.asciidoc  README.md  init  logging.patch  looprunner.py  uniformitycheck.py
Experiments/Results/: robot-exp-forag-50k.txt
Results/controllers/: ho-agg-test-50k.txt  ho-forag-test-50k.txt
example/: .Rhistory  fsm_working.txt  target-runner
example/grammars/: grammar-fsm.txt
example/mission-folder/: example_aggregation.argos
example/results-folder/: irace.Rdata
example/scenarios/: scenario5k.txt
experiments/: automodegianduja_aggregation.xml  automodegianduja_aggregation_2spots.xml  automodegianduja_aggregation_2spots_visu.xml  automodegianduja_aggregation_visu.xml  automodegianduja_decision.xml  automodegianduja_decision_visu.xml  automodegianduja_nesting.xml  automodegianduja_nesting_hide.xml  automodegianduja_nesting_hide_visu.xml  automodegianduja_nesting_visu.xml  automodegianduja_stop.xml  automodegianduja_stop_visu.xml
experiments/adaptation/: adp-fr-mtc.argos  adp-fr-trn.argos  adp-st-mtc.argos  adp-st-trn.argos  adp-syn-mt.argos  adp-syn-mtc.argos  adp-syn-trn.argos  (+1 more)
loop-functions/: CMakeLists.txt  GiandujaAggregation2SpotsLoopFunc.cpp  GiandujaAggregation2SpotsLoopFunc.h  GiandujaAggregationLoopFunc.cpp  GiandujaAggregationLoopFunc.h  GiandujaDecisionLoopFunc.cpp  GiandujaDecisionLoopFunc.h  GiandujaNestingHideLoopFunc.cpp  GiandujaNestingHideLoopFunc.h  GiandujaNestingHideLoopFunc2.cpp  GiandujaNestingLoopFunc.cpp  GiandujaNestingLoopFunc.h  GiandujaNestingLoopFunc2.cpp  GiandujaStopLoopFunc.cpp  GiandujaStopLoopFunc.h
loop-functions/adaptation/: CMakeLists.txt  ForagMtcLoopFunc.cpp  ForagMtcLoopFunc.h  ForagTrnLoopFunc.cpp  ForagTrnLoopFunc.h  StopMtcLoopFunc.cpp  StopMtcLoopFunc.h  StopTrnLoopFunc.cpp  StopTrnLoopFunc.h  SynMtcLoopFunc.cpp  SynMtcLoopFunc.h  SynTrnLoopFunc.cpp  SynTrnLoopFunc.h
loop-functions/chocolate/LCN/: ChocolateLCNLoopFunc.cpp
loop-functions/colors/: CMakeLists.txt  ColorsLoopFunc.cpp  ColorsLoopFunc.h  ColorsStopLoopFunc.cpp  ColorsTestLoopFunc.cpp
loop-functions/example/: AggregationAnytimeAggregationLoopFunc.cpp  AggregationAnytimeAggregationLoopFunc.h  AggregationAnytimeSelectionLoopFunc.cpp  AggregationAnytimeSelectionLoopFunc.h  AggregationLoopFunc.h  AggregationTwoSpotsFarLoopFunc.cpp  AggregationTwoSpotsFarLoopFunc.h  AggregationTwoSpotsOriginalLoopFunc.cpp  AggregationTwoSpotsOriginalLoopFunc.h  AggregationTwoSpotsPowerLoopFunc.cpp  AggregationTwoSpotsPowerLoopFunc.h  AnytimeSelectionDiffLoopFunc.cpp  AnytimeSelectionDiffLoopFunc.h  CMakeCache.txt  CMakeLists.txt  EndtimeDiffLoopFunc.cpp  EndtimeDiffLoopFunc.h  ExampleAggregationLoopFunc.cpp  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h  ForagingTwoSpotsPowerLoopFunc.cpp  ForagingTwoSpotsPowerLoopFunc.h  Makefile  cmake_install.cmake
loop-functions/example/chocolate/: Makefile  cmake_install.cmake
loop-functions/example/chocolate/AAC/: Makefile  cmake_install.cmake
loop-functions/example/chocolate/CFA/: Makefile  cmake_install.cmake
loop-functions/example/chocolate/LCN/: Makefile  cmake_install.cmake
loop-functions/example/chocolate/SCA/: Makefile  cmake_install.cmake
loop-functions/example/chocolate/SPC/: Makefile  cmake_install.cmake
loop-functions/example/example/: Makefile  cmake_install.cmake
loop-functions/example/visual-add-ons/: Makefile  cmake_install.cmake
loop-functions/icra/: CMakeLists.txt  IcraAggLoopFunc.cpp  IcraDesClasLoopFunc.cpp  IcraDesLoopFunc.cpp  IcraStopLoopFunc.cpp
loop-functions/mate/: CMakeLists.txt
loop-functions/mate/AAC/: CMakeLists.txt  MateAACLoopFunc.cpp  MateAACLoopFunc.h
loop-functions/mate/LCN/: CMakeLists.txt  MateLCNLoopFunc.cpp  MateLCNLoopFunc.h
loop-functions/mate/SPC/: CMakeLists.txt  MateSPCLoopFunc.cpp  MateSPCLoopFunc.h
loop-functions/piecewise/: PwLoopFunc.cpp  PwLoopFunc.h
loop-functions/sequence/: SeqLoopFunc.cpp  SeqLoopFunc.h
loop-functions/tuttifrutti/: CMakeLists.txt  TuttiAgLoopFunc.cpp  TuttiAgLoopFunc.h  TuttiFrLoopFunc.cpp  TuttiFrLoopFunc.h  TuttiLoopFunc.cpp  TuttiLoopFunc.h  TuttiStLoopFunc.cpp  TuttiStLoopFunc.h
loop-functions/vanilla/: AggregationTwoSpotsLoopFunc.cpp  AggregationTwoSpotsLoopFunc.h  CMakeLists.txt  ForagingTwoSpotsLoopFunc.cpp
loop-functions/visual-add-ons/: CMakeLists.txt
loop_functions/: CMakeLists.txt  GiandujaAggregationLoopFunc.cpp  GiandujaAggregationLoopFunc.h  GiandujaNestingLoopFunc.h
optimization/: aggreg-200k-0208exp-results.txt  aggreg-results.txt  aggreg2spots-results.txt  aggreg2spotsng-200k-exp-results.txt  decision-results.txt  depend_config.txt  draft_grammar_bt  gianduja_grammar.txt  gianduja_grammar2.txt  grammar.txt  grammar_no_gian.txt  parallel-irace-mpi  scenario.txt  scenario_agg.txt  scenario_agg2spots.txt  scenario_desi.txt  scenarionesting.txt  scenarionesting_no_gian.txt  scenarionestinghide.txt  scenarionestinghide_sq.txt  scenariostop.txt  scenariostop_no_gian.txt  stop-results.txt  target-runner
src/: AutoMoDeMain.cpp  AutoMoDeMainBT.cpp  AutoMoDeMainPseudoReality.cpp  AutoMoDeVisualizeFSM.cpp  CMakeLists.txt  RealLibrary.cmake  SimLibrary.cmake
(+368 files in other folders)
