add_library(example_aggregation_loopfunc SHARED ExampleAggregationLoopFunc.h ExampleAggregationLoopFunc.cpp)
target_link_libraries(example_aggregation_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(aggregation_two_spots_far_loopfunc SHARED AggregationTwoSpotsFarLoopFunc.h AggregationTwoSpotsFarLoopFunc.cpp)
target_link_libraries(aggregation_two_spots_far_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)
