add_library(example_aggregation_loopfunc SHARED ExampleAggregationLoopFunc.h ExampleAggregationLoopFunc.cpp)
target_link_libraries(example_aggregation_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(aggregation_two_spots_far_loopfunc SHARED AggregationTwoSpotsFarLoopFunc.h AggregationTwoSpotsFarLoopFunc.cpp)
target_link_libraries(aggregation_two_spots_far_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(aggregation_two_spots_original_loopfunc SHARED AggregationTwoSpotsOriginalLoopFunc.h AggregationTwoSpotsOriginalLoopFunc.cpp)
target_link_libraries(aggregation_two_spots_original_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(aggregation_two_spots_power_loopfunc SHARED AggregationTwoSpotsPowerLoopFunc.h AggregationTwoSpotsPowerLoopFunc.cpp)
target_link_libraries(aggregation_two_spots_power_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(aggregation_anytime_selection_loopfunc SHARED AggregationAnytimeSelectionLoopFunc.h AggregationAnytimeSelectionLoopFunc.cpp)
target_link_libraries(aggregation_anytime_selection_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(aggregation_anytime_aggregation_loopfunc SHARED AggregationAnytimeAggregationLoopFunc.h AggregationAnytimeAggregationLoopFunc.cpp)
target_link_libraries(aggregation_anytime_aggregation_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(foraging_loopfunc SHARED ForagingTwoSpotsLoopFunc.h ForagingTwoSpotsLoopFunc.cpp)
target_link_libraries(foraging_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)

add_library(foraging_power_loopfunc SHARED ForagingTwoSpotsPowerLoopFunc.h ForagingTwoSpotsPowerLoopFunc.cpp)
target_link_libraries(foraging_power_loopfunc argos3plugin_${ARGOS_BUILD_FOR}_epuck)
